# lcp_utils

./: .gitignore  README.md  SONY (Viltrox AF 35mm F1.8 EVO) - RAW.lcp  SONY (Viltrox AF 85mm F2.0 EVO) - RAW.lcp  landscape_images.py  pyproject.toml
lcp_utils/: __init__.py  __main__.py  cli.py  patch.py  utils.py
lcp_utils/calibrate/: __init__.py  exif.py  metadata.py
lcp_utils/parser/: __init__.py  index.py  lcp.py
lcp_utils/perspective/: __init__.py  charuco.py
lcp_utils/vignette/: __init__.py  uniform.py
profiles/: SONY (Viltrox AF 35mm F1.8 EVO) - RAW.lcp  SONY (Viltrox AF 85mm F2.0 EVO) - RAW.lcp  patch.json
test_resources/: direct_perspective.lcp  mixed_profiles.lcp  nested_perspective_vignette.lcp
tests/: test_index.py  test_lcp.py  test_package.py  test_patch.py
