[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "lcp-utils"
version = "0.1.0"
description = "Utilities for Lens Correction Profile (LCP) workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "logic" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["lcp_utils"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["lcp_utils", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
